<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>perobobbot</groupId>
    <artifactId>perobobbot</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>io.micronaut</groupId>
        <artifactId>micronaut-parent</artifactId>
        <version>3.8.8</version>
    </parent>

    <properties>

        <application.name>Perobobbot</application.name>

        <asciidoctor.maven.plugin.version>2.2.2</asciidoctor.maven.plugin.version>
        <asciidoctorj.version>2.5.3</asciidoctorj.version>
        <asciidoctorj.diagram.version>2.2.3</asciidoctorj.diagram.version>

        <exec.mainClass>perobobbot.launcher.Perobobbot</exec.mainClass>

        <jdk.version>17</jdk.version>
        <release.version>17</release.version>

        <micronaut.version>3.8.8</micronaut.version>
        <micronaut.data.version>3.9.7</micronaut.data.version>
        <micronaut.runtime>netty</micronaut.runtime>

        <asciidoctor.maven.plugin.version>2.2.2</asciidoctor.maven.plugin.version>
        <asciidoctorj.version>2.5.5</asciidoctorj.version>
        <asciidoctorj.diagram.version>2.2.3</asciidoctorj.diagram.version>
        <jruby.version>9.3.7.0</jruby.version>


        <fpc-tools.version>0.1.1-SNAPSHOT</fpc-tools.version>
        <pb-twitch.version>0.0.1-SNAPSHOT</pb-twitch.version>
        <zookeeper-discovery.version>0.0.1-SNAPSHOT</zookeeper-discovery.version>
        <jplugman.version>3.0.0-SNAPSHOT</jplugman.version>

    </properties>

    <modules>
        <module>bot</module>

    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-chat-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-bus-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-oauth-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-web-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-service-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-twitch-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-twitch-service-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-command-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-discord-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>perobobbot</groupId>
                <artifactId>perobobbot-callback-api</artifactId>
                <version>${project.version}</version>
            </dependency>


            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>23.0.0</version>
            </dependency>


            <dependency>
                <groupId>io.micronaut</groupId>
                <artifactId>micronaut-runtime</artifactId>
                <version>${micronaut.core.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.micronaut</groupId>
                        <artifactId>micronaut-jackson-databind</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources-with-filtering</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <!-- Uncomment to enable incremental compilation -->
                    <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
                    <annotationProcessorPaths combine.self="override">
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut</groupId>
                            <artifactId>micronaut-inject-java</artifactId>
                            <version>${micronaut.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut.data</groupId>
                            <artifactId>micronaut-data-processor</artifactId>
                            <version>${micronaut.data.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut</groupId>
                            <artifactId>micronaut-http-validation</artifactId>
                            <version>${micronaut.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut</groupId>
                            <artifactId>micronaut-validation</artifactId>
                            <version>${micronaut.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut.serde</groupId>
                            <artifactId>micronaut-serde-processor</artifactId>
                            <version>${micronaut.serialization.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut.openapi</groupId>
                            <artifactId>micronaut-openapi</artifactId>
                            <version>${micronaut.openapi.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Amicronaut.processing.group=perobobbot</arg>
                        <arg>-Amicronaut.processing.module=data</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <dependencies>
                    <dependency>
                        <groupId>io.micronaut.test</groupId>
                        <artifactId>micronaut-test-junit5</artifactId>
                        <version>3.4.0</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

</project>
